--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "pinia": "^2.1.7",
+    "pinia": "^2.0.0-rc.10",
     "unplugin-vue-components": "^0.26.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
