--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.8.0",
     "axios": "^1.6.7",
     "pinia": "^2.0.0-rc.10",
     "unplugin-vue-components": "^0.26.0",
