Responsive rework and changes for deployment

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 #VITE_API_URL=https://fakestoreapi.com
-VITE_API_URL=http://127.0.0.1:8000/api
+#VITE_API_URL=http://127.0.0.1:8000/api
+
+VITE_API_URL=http://212.47.242.152:8000/api
+
+#VITE_IMAGE_BASE_URL=VITE_IMAGE_BASE_URL_PLACEHOLDER
