--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,16 @@ services:
         container_name: vue-app
         ports:
             - '8080:80'
+        environment:
+            REACT_APP_API_URL: http://212.47.242.152:8000
+#        environment:
+#            REACT_APP_API_URL: http://127.0.0.1:8000
+
+#services:
+#    front:
+#        image: bastavavos/frontend:latest
+#        container_name: vue-app
+#        ports:
+#            - '8080:80'
+#        environment:
+#            REACT_APP_API_URL: http://212.47.242.152:8000
